# relink

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  LICENSE  NOTICE.txt  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: auto-tags.js  auto_bump_version.py  pr-template.js  sync-versions.js
.github/workflows/: dev-version-bump.yml  docs.yml  lint.yml  pr-checks.yml  pr-template.js  pr-template.yml  release.yml  sync-versions.yml
docs/: Makefile  changelog.rst  concepts.rst  conf.py  index.rst  installation.rst  make.bat  overview.rst  quickstart.rst  requirements.txt  version_guarantees.rst
docs/_static/css/: attributetable.css  custom_width.css  theme.css
docs/_static/js/: custom_width.js
docs/_templates/sidebar/: width-selector.html
docs/api/: advanced.rst  core.rst  enums.rst  events.rst  exceptions.rst  gateway.events.rst  gateway.rst  gateway.schemas.rst  index.rst  models.rst  network.rst  rest.http.rst  rest.rst  rest.schemas.rst  utils.rst
docs/api/advanced/: gateway.rst  index.rst  rest.rst  supplementary.rst
docs/extensions/: attributetable.py  navigationhome.py  pythonref.py
docs/guides/: filters.rst  getting-started.rst  index.rst  lavalink-setup.rst  lavalink.rst  migrating-from-wavelink.rst  moving-from-wavelink.rst  players.rst  queue.rst  searching.rst
docs/guides/migrations/: index.rst  lavalink.py.rst  lavaplay.py.rst  mafic.rst  moving-from-wavelink.rst  pomice.rst  wavelink.rst
docs/source/: conf.py  index.rst
docs/source/api/: gateway.events.rst  gateway.rst  gateway.schemas.rst  models.rst  modules.rst  network.rst  rest.http.rst  rest.rst  rest.schemas.rst  utils.rst
examples/: advanced_example.py  advanced_player.py  events_example.py  simple_bot.py  simple_example.py
examples/discord.py/: advanced_example.py  events_example.py  filters_example.py  settings_example.py  simple_example.py
examples/disnake/: advanced_example.py  events_example.py  filters_example.py  settings_example.py  simple_example.py
examples/dpy/: advanced_example.py  events_example.py  filters_example.py  settings_example.py
examples/nextcord/: advanced_example.py  events_example.py  filters_example.py  settings_example.py  simple_example.py
examples/py-cord/: advanced_example.py  events_example.py  filters_example.py  settings_example.py  simple_example.py
examples/pycord/: simple_example.py
relink/: __init__.py  _registry.py  _version.py  errors.py
relink/gateway/: __init__.py  cache.py  client.py  enums.py  errors.py  event_models.py  node.py  player.py  pool.py  queue.py
relink/gateway/client/: __init__.py  _base.py  _disnake.py  _dpy.py  _factory.py  _pycord.py
relink/gateway/client/adapters/: __init__.py  _disnake.py  _dpy.py  _pycord.py
relink/gateway/events/: __init__.py  raw_models.py  router.py
relink/gateway/player/: __init__.py  _autoplay.py  _base.py  _events.py  _factory.py  _inactivity.py  _lifecycle.py  _playback.py
relink/gateway/player/adapters/: __init__.py  _disnake.py  _dpy.py  _pycord.py
relink/gateway/player/handlers/: __init__.py  _autoplay.py  _base.py  _events.py  _incativity.py  _lifecycle.py  _playback.py
relink/gateway/player_new/: __init__.py  _base.py  _factory.py
relink/gateway/player_new/adapters/: _disnake.py  _dpy.py
relink/gateway/player_new/handlers/: __init__.py  _events.py  _incativity.py  _lifecycle.py
relink/gateway/queue/: __init__.py  base.py  history.py  queue.py
relink/gateway/schemas/: __init__.py  events.py  receive.py
relink/http/: __init__.py  aiohttp.py  base.py  curl_cffi.py
relink/models/: __init__.py  base.py  filters.py  info.py  player_info.py  playlist.py  responses.py  server_info.py  settings.py  track.py
relink/network/: __init__.py  _aiohttp.py  _curl_cffi.py  aiohttp.py  base.py  curl_cffi.py  errors.py  message.py  msg.py
relink/rest/: __init__.py  enums.py  errors.py  player.py  track.py
relink/rest/http/: __init__.py  base.py  info.py  planner.py  player.py  session.py  track.py
relink/rest/schemas/: __init__.py  enums.py  filters.py  info.py  planner.py  player.py  playlist.py  response.py  route_planner.py  session.py  track.py
relink/utils/: __init__.py  properties.py
sonolink/: __init__.py  _registry.py  _version.py  errors.py
sonolink/gateway/: __init__.py  cache.py  enums.py  errors.py  event_models.py  node.py
sonolink/gateway/client/: __init__.py  _factory.py
sonolink/gateway/client/adapters/: __init__.py  _disnake.py  _dpy.py  _nextcord.py  _pycord.py
sonolink/gateway/node/: __init__.py  _base.py  _connection.py  _events.py  _players.py  _rest.py  _websocket.py
sonolink/gateway/player/: __init__.py  _base.py  _factory.py
sonolink/gateway/player/adapters/: __init__.py  _disnake.py  _dpy.py  _nextcord.py  _pycord.py
sonolink/gateway/queue/: __init__.py  base.py  history.py  queue.py
sonolink/gateway/schemas/: __init__.py  events.py  receive.py
sonolink/models/: __init__.py  base.py  filters.py  info.py  player_info.py  playlist.py  responses.py  settings.py  track.py
sonolink/network/: __init__.py  _aiohttp.py  _curl_cffi.py  base.py  errors.py  message.py
sonolink/rest/: __init__.py  enums.py  errors.py
sonolink/rest/http/: __init__.py  base.py  info.py  planner.py  player.py
sonolink/rest/schemas/: __init__.py  filters.py  info.py  planner.py  player.py  playlist.py  session.py  track.py
sonolink/utils/: __init__.py  properties.py  snowflake.py
(+7 files in other folders)
